# rustpilot

./: Cargo.toml  LICENSE  README.md  SPEC.md
src/: app.rs  main.rs
src/config/: mod.rs
src/llm/: agent.rs  mod.rs  tools.rs
src/panels/: code.rs  editor.rs  llm.rs  mod.rs  prompt.rs  terminal.rs
src/refs/: mod.rs
src/storage/: mod.rs
src/ui/: mod.rs  syntax.rs
