[package]
name = "rustpilot"
version = "0.1.0"
edition = "2024"
description = "Developer cockpit TUI — code editor, LLM streaming, and prompt manager in one terminal"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP / LLM streaming
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio-stream = "0.1"
eventsource-stream = "0.2"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Syntax highlighting
syntect = "5"

# Diff
similar = "2"

# File watching
notify = "7"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
ignore = "0.4"          # .gitignore-aware file walking
anyhow = "1"
log = "0.4"
cli-clipboard = "0.4.0"

[profile.release]
opt-level = 3
lto = true
